Bug 131390 - PPTX: custom slide show is not imported
Summary: PPTX: custom slide show is not imported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: target:7.2.0
Keywords: filter:pptx
Depends on:
Blocks: PPTX-SlideShowSettings
  Show dependency treegraph
 
Reported: 2020-03-17 19:42 UTC by Mike Kaganski
Modified: 2021-06-06 13:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Custom slide show PPTX (34.81 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-03-17 19:42 UTC, Mike Kaganski
Details
The example file in PP and current master (103.20 KB, image/png)
2021-01-28 08:33 UTC, NISZ LibreOffice Team
Details
Custom slide show PPTX from MSO (45.05 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-06-01 08:22 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-03-17 19:42:57 UTC
Created attachment 158762 [details]
Custom slide show PPTX

The attachment contains slides, and one custom slide show with slides 3, 1, 1.
The slide show is not imported into Impress. Tested with Version: 6.4.2.2 (x64)
Build ID: 4e471d8c02c9c90f512f7f9ead8875b57fcb1ec3
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL

and with s 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL
Comment 1 Mike Kaganski 2020-03-18 05:28:07 UTC
Sorry, master version got broken in comment 0:

Version: 7.0.0.0.alpha0+ (x64)
Build ID: f4dd9ecdc21696b360dedf7fefa371c8858c1830
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL
Comment 2 Oliver Grimm 2020-03-21 23:41:58 UTC
well, I confirm that Impress does not list a custom slide show here in LO 6.4.1.2 (Linux) for your sample file. I do not have powerpoint here so I cannot confirm your bug, though.
Comment 3 NISZ LibreOffice Team 2021-01-28 08:33:47 UTC
Created attachment 169213 [details]
The example file in PP and current master

Slide Show -> Custom Slide Show dialog is empty in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7eb289c49cc7245ef3001a39be0c15d06bbe875b
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 4 Commit Notification 2021-05-25 13:45:45 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ecf48b2d4f3e54dbb2c1e295120d73e7b7a11338

tdf#131390 PPTX: fix custom slide show is not imported.

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Timur 2021-05-31 09:12:31 UTC
With this fix custom show is imported/seen as a list, an improvement.
But it doesn't really run (with check box "Use Custom Slide Show" and "Start"). So I set Reopen. 
To see, in attachment 158762 [details] some text should indicate slide content like 1,2,3,4.
Comment 6 NISZ LibreOffice Team 2021-05-31 15:53:15 UTC
(In reply to Timur from comment #5)
> With this fix custom show is imported/seen as a list, an improvement.
> But it doesn't really run (with check box "Use Custom Slide Show" and
> "Start"). So I set Reopen. 
> To see, in attachment 158762 [details] some text should indicate slide
> content like 1,2,3,4.

Thanks for testing!

I can confirm that starting the slideshow that way does not work, but it could if the name of the custom show would not contain spaces.

I'd rather file this as a separate report though. Or more...

Actually this is similar to the bug #137090 where you can't start a slideshow with only hidden slides.
But there the example file contains an ODP custom slideshow with a name containing spaces.
Removing the spaces from the name AND adding a non-hidden slide to the custom slideshow AND clicking OK instead of Start actually makes it work on the next start of the dialog.

However... since you can reset the use of the custom slideshow in the "Slide Show Settings" dialog to All, doing the [ ] Use Custom Slide Show + OK thing does not work unless you change something under the Edit button.

It seems to me that this UI has several issues and they are independent from the PPTX support.
Comment 7 NISZ LibreOffice Team 2021-05-31 17:53:57 UTC
I think this can be closed the remaining problem is bug #142589
Comment 8 Timur 2021-06-01 08:22:49 UTC
Created attachment 172523 [details]
Custom slide show PPTX from MSO

Thanks for more testing :)
Now I created custom SS in MSO with marked slides, and it runs OK (apart from UI bug), regardless of spaces in custom SS name. So this bug is OK.
What I find now wrong (and what was the real cause I reopened this one) is saving PPTX which I'll write in Filesave bug 125071.
Comment 9 Timur 2021-06-01 08:37:17 UTC
I also tested PPT from MSO and custom SS runs OK (except if custom SS name contains spaces - until other custom SS is run).
So I see spaces issue only in PPT, not in PPTX.
Comment 10 BogdanB 2021-06-06 13:37:48 UTC
"Custom Show 1" is appearing in version
Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: e96554b67b17f9d3d91b0bb1f29ab0b9cdc43dcb
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded