tdf#131390 PPTX: fix custom slide show is not imported.

Change-Id: I62e1bfaae23d1b18e71a2c16651d01144a26907c